syntax = "proto3";

package policies;
option go_package = "policies/pb";

service PolicyService {
  rpc RetrievePolicyData(PolicyByIDReq) returns (PolicyData) {}
}

message PolicyByIDReq {
  string policyID = 1;
  string ownerID = 2;
}

message PolicyData {
  bytes value = 1;
}
